CS_SBOX_20150209_01/Metadata/unpackaged/objects/CampaignMember.object
<CustomObject>
    <fields>
        <fullName>CRM_Activity_ID__c</fullName>
        <description>Created by LM on 1/31/14</description>
        <label>CRM Activity ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Response_Date__c</fullName>
        <label>CRM Response Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GA_Campaign__c</fullName>
        <description>Google Analytic Campaign</description>
        <inlineHelpText>Google Analytic Campaign</inlineHelpText>
        <label>GA Campaign</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GA_Content__c</fullName>
        <description>Google Analytic Content</description>
        <inlineHelpText>Google Analytic Content</inlineHelpText>
        <label>GA Content</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GA_Medium__c</fullName>
        <description>Google Analytic Medium</description>
        <inlineHelpText>Google Analytic Medium</inlineHelpText>
        <label>GA Medium</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GA_Source__c</fullName>
        <description>Google Analytic Source</description>
        <inlineHelpText>Google Analytic Source</inlineHelpText>
        <label>GA Source</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GA_Term__c</fullName>
        <description>Google Analytic Term</description>
        <inlineHelpText>Google Analytic Term</inlineHelpText>
        <label>GA Term</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_First_Assoc_Month__c</fullName>
        <description>Month from Member First Associated Date</description>
        <formula>TEXT(MONTH(DATEVALUE(CreatedDate)))</formula>
        <inlineHelpText>Month from Member First Associated Date</inlineHelpText>
        <label>Member First Assoc Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_First_Assoc_Year__c</fullName>
        <description>Year from Member First Associated Date</description>
        <formula>TEXT(YEAR(DATEVALUE(CreatedDate)))</formula>
        <inlineHelpText>Year from Member First Associated Date</inlineHelpText>
        <label>Member First Assoc Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Migrated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Migrated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>utm_Campaign__c</fullName>
        <description>Created by LM on 10/8/2013 for Phase 2 rollout</description>
        <label>utm_Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>utm_Medium__c</fullName>
        <description>Created by LM on 10/8/2013 for Phase 2 rollout</description>
        <label>utm_Medium</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>utm_Source__c</fullName>
        <description>Created by LM on 10/8/2013 for Phase 2 rollout</description>
        <label>utm_Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <validationRules>
        <fullName>Non_Marketing_Adds</fullName>
        <active>false</active>
        <errorConditionFormula>AND(NOT($Profile.Name = &quot;Marketing&quot;),
OR(
NOT(ISPICKVAL(Campaign.Type, &quot;Nurture&quot;)),
NOT(ISPICKVAL(Status, &quot;Sent&quot;))
),
OR($User.Bypass_Validation__c == false)
)</errorConditionFormula>
        <errorMessage>Non-Marketing Users can only add someone to a Nurture Campaign with a Status of Sent.  Please correct your addition or contact Marketing for help.</errorMessage>
    </validationRules>
</CustomObject>